@@ -946,6 +946,13 @@ namespace Marvel {
 
 	static void AddItemCommands(std::map<std::string, mvPythonParser>* parsers)
 	{
+		parsers->insert({ "get_all_items", mvPythonParser({
+		}, "Returns a list of all items.", "List[str]", "Widget Commands") });
+
+		parsers->insert({ "get_item_children", mvPythonParser({
+			{mvPythonDataType::String, "item"}
+		}, "Returns a list of an item's children.", "List[str]", "Widget Commands") });
+
 		parsers->insert({ "set_item_label", mvPythonParser({
 			{mvPythonDataType::String, "item"},
 			{mvPythonDataType::String, "label"},
